# neogel

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/ga/: bipedalwalker_linear.yaml  sleepy_sphere.yaml  sphere.yaml
configs/qd/: bipedalwalker_mapelites.yaml  sphere_mapelites.yaml
examples/: ga_sphere.py
neogel/cli/: run.py
neogel/containers/: archive_grid.py
neogel/core/: build.py  config.py  evaluator.py  imports.py  rng.py  run_manager.py  runner.py  types.py
neogel/descriptors/: bipedalwalker.py  sphere.py
neogel/emitters/: gaussian_emitter.py
neogel/engines/: ga.py  mapelites.py
neogel/logging/: sinks.py
neogel/metrics/: fitness.py  runtime.py
neogel/operators/: mutation.py  selection.py
neogel/problems/: bipedalwalker.py  bipedalwalker_qd.py  sleepy.py  sphere.py  sphere_qd.py
neogel/viz/: archive_heatmap.py  fitness_curves.py
runs/ga_bipedalwalker_linear/20260129_190218_seed0_630e043_dirty/: meta.json  metrics.csv  metrics.jsonl
runs/ga_bipedalwalker_linear/20260129_190423_seed0_630e043_dirty/: meta.json  metrics.csv  metrics.jsonl
runs/ga_bipedalwalker_linear/20260129_190604_seed0_630e043_dirty/: meta.json  metrics.csv  metrics.jsonl
runs/ga_sphere/20260129_181608_seed0_630e043_dirty/: meta.json
runs/ga_sphere/20260129_181756_seed0_630e043_dirty/: meta.json  metrics.csv
runs/ga_sphere/20260129_182147_seed0_630e043_dirty/: meta.json  metrics.csv
runs/ga_sphere/20260129_182705_seed0_630e043_dirty/: meta.json  metrics.csv
tests/: test_cli_parallel_speed.py  test_parallel_evaluator.py
(+7 files in other folders)
